# poc_ts

./: .gitignore  README.md  ecosystem.config.cjs  main.py  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
